2010-09-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* GTS/GTS.cxx:
	* GTS/GTS.h:
	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add functions:
	  void TransformAndResetTrans();
	  void RotateAndResetRot();
	that transform surface vertices and reset corresponding part of
	transformation matrix.

2010-09-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Proto-implementation of bool operations and result fixing.

	* GTS/GTSBoolOpHelper.cxx:
	* GTS/GTSBoolOpHelper.h:
	Helper for bollen ops and fixing.

	* attic/BoolOpFixOnIntersectionCurve.cxx:
	Attempt at fixing bool ops on intersection curve.

	* GTS/GTS.cxx:
	* GTS/GTS.h:
	Add functions:
	  void TransformSurfaceVertices(GtsSurface* s, ZTrans* t);
	  void WriteSurfaceToFile(GtsSurface* s, const TString& file);

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add bool-ops API.

	* Rnr/GL/GTSurf_GL_Rnr.cxx:
	Support renering of vertex points.

	* Glasses/GTSTorus.h:
	Weed layout.

2010-08-15  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSurf.cxx:
	Use HTransD instead of TVector3.

2010-08-15  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSIsoMaker.cxx:
	* Glasses/GTSIsoMaker.h:
	In vertex_iso_fixer() properly calculate length of step along the
	gradient.
	Add member 'Int_t mFixPointMaxIter'.
	Add max-iteration and n-failed members to iso_fix_arg struct.

	* Stones/GTSIsoMakerFunctor.h:
	* Glasses/GTSTorus.cxx:
	* Glasses/GTSTorus.h:
	Change signature of GTSIsoGradient() to:
	  virtual Double_t GTSIsoGradient(Double_t x, Double_t y, Double_t z, HPointD& g) = 0;

	* Glasses/GTSRetriangulator.cxx:
	In Refine(), pass squrare of cost parameter to GTS (as was done
	for Coarsen()).

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add function 'void MakeZSplitSurfaces(...)'. It creates two
	sub-surfaces, split at given z-coordinate.

2010-07-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Add calculation of iso-field gradient and method to move
	surface-points onto the iso-surface.

	* Stones/GTSIsoMakerFunctor.h: